--- a/assets/plot/1_2_regularity_lines_all.html
+++ b/assets/plot/1_2_regularity_lines_all.html
@@ -22,6 +22,8 @@
     <option value="assets/plot/1_2_regularity_lines50k-100k.html">50k-100k Subscribers</option>
     <option value="assets/plot/1_2_regularity_lines100k-500k.html">100k-500k Subscribers</option>
     <option value="assets/plot/1_2_regularity_lines500k-1M.html">500k-1M Subscribers</option>
+    <option value="assets/plot/1_2_regularity_lines1M-2.5M.html">100k-500k Subscribers</option>
+    <option value="assets/plot/1_2_regularity_lines2.5M-5M.html">500k-1M Subscribers</option>
   </select>
 
   <iframe id="plotFrame" src="assets/plot/1_2_regularity_lines0-10k.html" width="750px" height="530px" frameborder="0" position="relative">Plot</iframe>
