--- a/assets/plot/1_2_regularity_lines_all.html
+++ b/assets/plot/1_2_regularity_lines_all.html
@@ -7,7 +7,8 @@
   <title>Dropdown Menu for Plots</title>
   <style>
     body {
-      max-width: 700px;
+      max-width: 750px;
+      max-height: 550px;
       margin: 0 auto;
     }
   </style>
@@ -26,7 +27,7 @@
     <option value="assets/plot/1_2_regularity_lines2.5M-5M.html">500k-1M Subscribers</option>
   </select>
 
-  <iframe id="plotFrame" src="assets/plot/1_2_regularity_lines0-10k.html" width="750px" height="530px" frameborder="0" position="relative">Plot</iframe>
+  <iframe id="plotFrame" src="assets/plot/1_2_regularity_lines0-10k.html" width="730px" height="530px" frameborder="0" position="relative">Plot</iframe>
 
   <script>
     function changePlot() {
