--- a/assets/plot/1_2_regularity_lines_range_all.html
+++ b/assets/plot/1_2_regularity_lines_range_all.html
@@ -7,7 +7,8 @@
   <title>Dropdown Menu for Plots</title>
   <style>
     body {
-      max-width: 500px;
+      max-width: 750px;
+      max-height: 550px;
       margin: 0 auto;
     }
   </style>
@@ -21,7 +22,7 @@
     <option value="assets/plot/1_2_regularity_lines_range_4_1.html">Regularity below 32</option>
   </select>
 
-  <iframe id="plotFrame" src="assets/plot/1_2_regularity_lines_range_4_0.html" width="750px" height="530px" frameborder="0" position="relative">Plot</iframe>
+  <iframe id="plotFrame" src="assets/plot/1_2_regularity_lines_range_4_0.html" width="730px" height="530px" frameborder="0" position="relative">Plot</iframe>
 
   <script>
     function changePlot() {
