--- a/assets/plot/1_2_regularity_lines_all.html
+++ b/assets/plot/1_2_regularity_lines_all.html
@@ -7,7 +7,7 @@
   <title>Dropdown Menu for Plots</title>
   <style>
     body {
-      max-width: 700px;
+      max-width: 750px;
       margin: 0 auto;
     }
   </style>
@@ -17,16 +17,16 @@
 
   <label for="plotDropdown">Select a Plot:</label>
   <select id="plotDropdown" onchange="changePlot()">
-    <option value="assets/plot/1_2_regularity_lines0-10k.html">0-10k Subscribers</option>
-    <option value="assets/plot/1_2_regularity_lines10k-50k.html">10k-50k Subscribers</option>
-    <option value="assets/plot/1_2_regularity_lines50k-100k.html">50k-100k Subscribers</option>
-    <option value="assets/plot/1_2_regularity_lines100k-500k.html">100k-500k Subscribers</option>
-    <option value="assets/plot/1_2_regularity_lines500k-1M.html">500k-1M Subscribers</option>
-    <option value="assets/plot/1_2_regularity_lines1M-2.5M.html">100k-500k Subscribers</option>
-    <option value="assets/plot/1_2_regularity_lines2.5M-5M.html">500k-1M Subscribers</option>
+    <option value="1_2_regularity_lines0-10k.html">0-10k Subscribers</option>
+    <option value="1_2_regularity_lines10k-50k.html">10k-50k Subscribers</option>
+    <option value="1_2_regularity_lines50k-100k.html">50k-100k Subscribers</option>
+    <option value="1_2_regularity_lines100k-500k.html">100k-500k Subscribers</option>
+    <option value="1_2_regularity_lines500k-1M.html">500k-1M Subscribers</option>
+    <option value="1_2_regularity_lines1M-2.5M.html">100k-500k Subscribers</option>
+    <option value="1_2_regularity_lines2.5M-5M.html">500k-1M Subscribers</option>
   </select>
 
-  <iframe id="plotFrame" src="assets/plot/1_2_regularity_lines0-10k.html" width="750px" height="750px" frameborder="0" position="relative">Plot</iframe>
+  <iframe id="plotFrame" src="1_2_regularity_lines0-10k.html" width="750px" height="750px" frameborder="0" position="relative">Plot</iframe>
 
   <script>
     function changePlot() {
